<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/lecture_note_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/announcement_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/file_upload_text"
        app:layout_constraintEnd_toEndOf="@+id/lecture_note_description"
        app:layout_constraintStart_toStartOf="@+id/lecture_note_description"
        app:layout_constraintTop_toBottomOf="@+id/lecture_note_description" />

    <TextView
        android:id="@+id/upload"
        style="@style/TextViewButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/uplaod_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/file_upload"
        app:layout_constraintStart_toStartOf="@+id/file_upload"
        app:layout_constraintTop_toBottomOf="@+id/due_date" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/lecture_note_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cancel_24" />

    <EditText
        android:id="@+id/due_date"
        style="@style/InputFieldsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/ic_baseline_calendar_today_24"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/due_date_text"
        app:layout_constraintEnd_toEndOf="@+id/file_upload"
        app:layout_constraintStart_toStartOf="@+id/file_upload"
        app:layout_constraintTop_toBottomOf="@+id/file_upload" />

</androidx.constraintlayout.widget.ConstraintLayout>